--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     uses: ./.github/workflows/.test.yml
     secrets: inherit
     with:
-      revisions: |
+      refs: |
         master
         v0.15.1
         v0.14.1
