handle run count within testutil
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/.test.yml
+++ b/.github/workflows/.test.yml
@@ -108,6 +108,7 @@ jobs:
       TESTFLAGS: -v --timeout=30m
       TEST_IMAGE_BUILD: 0
       TEST_IMAGE_ID: buildkit-bench
+      BUILDKIT_RUN_COUNT: 3
     steps:
       -
         name: Download config files
