--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ env:
   GO_VERSION: 1.22
   SETUP_BUILDX_VERSION: latest
   SETUP_BUILDKIT_IMAGE: moby/buildkit:latest
+  BUILDKIT_CACHE_REPO: ghcr.io/moby/buildkit-bench-cache
 
 jobs:
   prepare:
@@ -50,13 +51,13 @@ jobs:
             const data = JSON.parse(fs.readFileSync('./bin/candidates.json', 'utf8'));
             let includes = [];
             for (const [key, value] of Object.entries(data.refs)) {
-              includes.push({name: key, ref: key, commit: value});
+              includes.push({type: "ref", ref: key, commit: value});
             }
             for (const [key, value] of Object.entries(data.releases)) {
-              includes.push({name: key, ref: key, commit: value});
+              includes.push({type: "release", ref: key, commit: value});
             }
             for (const [key, value] of Object.entries(data.commits)) {
-              includes.push({name: key, ref: value, commit: value});
+              includes.push({type: "commit", ref: value, commit: value});
             }
             core.info(JSON.stringify(includes, null, 2));
             core.setOutput('includes', JSON.stringify(includes ?? []));
@@ -76,14 +77,6 @@ jobs:
       BUILDKIT_RUN_COUNT: 3
     steps:
       -
-        name: Export BuildKit ref for ${{ matrix.name }}
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const ref = `${{ matrix.ref }}`;
-            core.info(`BUILDKIT_REF=${ref}`);
-            core.exportVariable('BUILDKIT_REF', ref);
-      -
         name: Checkout
         uses: actions/checkout@v4
       -
@@ -94,12 +87,26 @@ jobs:
           driver-opts: image=${{ env.SETUP_BUILDKIT_IMAGE }}
           buildkitd-flags: --debug
       -
+        name: Login to GHCR
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
         name: Build test image
         uses: docker/bake-action@v5
         with:
           targets: tests
           set: |
             *.output=type=docker,name=${{ env.TEST_IMAGE_ID }}
+            *.cache-to=type=registry,ignore-error=true,ref=${{ env.BUILDKIT_CACHE_REPO }}:${{ matrix.commit }}
+            *.cache-to=type=registry,ignore-error=true,ref=${{ env.BUILDKIT_CACHE_REPO }}:${{ matrix.type }}-${{ matrix.ref }}
+        env:
+          BUILDKIT_REF: ${{ matrix.ref }}
+          BUILDKIT_REF_TYPE: ${{ matrix.type }}
+          BUILDKIT_REF_COMMIT: ${{ matrix.commit }}
       -
         name: Test
         run: |
