--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,47 +12,23 @@ on:
   pull_request:
 
 env:
-  GO_VERSION: 1.22
   SETUP_BUILDX_VERSION: latest
   SETUP_BUILDKIT_IMAGE: moby/buildkit:latest
-  CANDIDATES_REFS: master
-  CANDIDATES_LAST_DAYS: 7
-  CANDIDATES_LAST_RELEASES: 3
 
 jobs:
-  prepare:
-    runs-on: ubuntu-24.04
-    outputs:
-      includes: ${{ steps.set.outputs.includes }}
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v4
-      -
-        name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-      -
-        name: Set includes
-        id: set
-        run: |
-          go run -mod=vendor ./cmd/refcandidates \
-            --refs ${{ env.CANDIDATES_REFS }} \
-            --last-days ${{ env.CANDIDATES_LAST_DAYS }} \
-            --last-releases ${{ env.CANDIDATES_LAST_RELEASES }} \
-            --gha-output includes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  buildkit-binaries:
+    uses: ./.github/workflows/.buildkit-binaries.yml
+    secrets: inherit
+    with:
+      refs: master
+      last_days: 7
+      last_releases: 3
+      artifact_key: buildkit-binaries
 
   test:
     runs-on: ubuntu-24.04
     needs:
-      - prepare
-    strategy:
-      fail-fast: false
-      matrix:
-        include: ${{ fromJson(needs.prepare.outputs.includes) }}
+      - buildkit-binaries
     env:
       TEST_FLAGS: -v --timeout=30m
       TEST_IMAGE_BUILD: 0
@@ -62,6 +38,21 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v4
+      -
+        name: Download binaries
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp/buildkit-binaries
+          pattern: buildkit-binaries-*
+          merge-multiple: true
+      -
+        name: Extract binaries
+        run: |
+          mkdir -p ./bin/buildkit-binaries
+          for f in "/tmp/buildkit-binaries"/*.tar.gz; do
+            (set -x ; tar -xzvf "$f" -C ./bin/buildkit-binaries)
+          done
+          tree -nph ./bin/buildkit-binaries
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -74,10 +65,10 @@ jobs:
         uses: docker/bake-action@v5
         with:
           targets: tests
+          provenance: false
           set: |
+            *.contexts.buildkit-binaries=./bin/buildkit-binaries
             *.output=type=docker,name=${{ env.TEST_IMAGE_ID }}
-        env:
-          BUILDKIT_REF: ${{ matrix.ref }}
       -
         name: Test
         run: |
