--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,20 @@ on:
 env:
   SETUP_BUILDX_VERSION: latest
   SETUP_BUILDKIT_IMAGE: moby/buildkit:latest
+  BUILDKIT_REPO: moby/buildkit
+  BUILDKIT_ARTIFACT_KEY: buildkit-binaries
 
 jobs:
+  # limitation to using envs in a reusable workflow input
+  # https://github.com/actions/runner/issues/2372
+  get-env:
+    runs-on: ubuntu-24.04
+    outputs:
+      BUILDKIT_REPO: ${{ env.BUILDKIT_REPO }}
+      BUILDKIT_ARTIFACT_KEY: ${{ env.BUILDKIT_ARTIFACT_KEY }}
+    steps:
+      - run: "true"
+
   prepare:
     runs-on: ubuntu-24.04
     outputs:
@@ -38,12 +50,15 @@ jobs:
 
   buildkit-binaries:
     uses: ./.github/workflows/.buildkit-binaries.yml
+    needs:
+      - get-env
     secrets: inherit
     with:
+      repo: ${{ needs.get-env.outputs.BUILDKIT_REPO }}
       refs: master
       last_days: 7
       last_releases: 3
-      artifact_key: buildkit-binaries
+      artifact_key: ${{ needs.get-env.outputs.BUILDKIT_ARTIFACT_KEY }}
 
   test:
     runs-on: ubuntu-24.04
@@ -67,7 +82,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: /tmp/buildkit-binaries
-          pattern: buildkit-binaries-*
+          pattern: ${{ env.BUILDKIT_ARTIFACT_KEY }}-*
           merge-multiple: true
       -
         name: Extract binaries
