--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,6 +116,7 @@ jobs:
           TEST_FLAGS: -bench=${{ matrix.test }} ${{ env.TEST_FLAGS }}
           TEST_BENCH_RUN: ${{ matrix.count }}
           TEST_BENCH_TIME: ${{ matrix.benchtime }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Result
         run: |
