testconfig helpers to load config and benchmark config
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -8,9 +8,11 @@ runs:
       description: Daemon binary version
       benchtime: 5s
       metrics:
-        - duration
+        duration:
+          description: Time (ns)
     BenchmarkBinarySize:
       description: Daemon binary size
       count: 1
       metrics:
-        - bytes
+        bytes:
+          description: Size (bytes)
