--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,4 +120,53 @@ jobs:
       -
         name: Result
         run: |
-          jq . ./bin/gotestoutput.json
+          resultName=$(echo ${{ matrix.test }} | sed 's/\//-/g')
+          resultPath=./bin/gotestoutput-$resultName.json
+          echo "TEST_RESULT_NAME=$resultName" >> $GITHUB_ENV
+          echo "TEST_RESULT_PATH=$resultPath" >> $GITHUB_ENV
+          mv ./bin/gotestoutput.json $resultPath
+          jq . $resultPath
+      -
+        name: Upload results
+        uses: actions/upload-artifact@v4
+        with:
+          name: bench-results-${{ env.TEST_RESULT_NAME }}
+          path: ${{ env.TEST_RESULT_PATH }}
+          if-no-files-found: error
+          retention-days: 1
+
+  merge:
+    runs-on: ubuntu-24.04
+    needs:
+      - test
+    steps:
+      -
+        name: Download results
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp/buildkit-bench-results
+          pattern: bench-results-*
+          merge-multiple: true
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+      -
+        name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      -
+        name: Merge and generate graphs
+        run: |
+          go run -mod=vendor ./cmd/gotestmetrics \
+            --debug merge --format html --output ./bin/results /tmp/buildkit-bench-results \
+      -
+        name: Publish
+        uses: crazy-max/ghaction-github-pages@v4
+        if: github.event_name != 'pull_request'
+        with:
+          target_branch: gh-pages
+          build_dir: ./bin/results
+          jekyll: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
