testutil: duration metric as milliseconds
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -9,7 +9,7 @@ runs:
       benchtime: 5s
       metrics:
         duration:
-          description: Time (ns)
+          description: Time (ms)
     BenchmarkBinarySize:
       description: Daemon binary size
       count: 1
