--- a/testconfig.yml
+++ b/testconfig.yml
@@ -5,13 +5,19 @@ defaults:
 runs:
   BenchmarkBinary:
     BenchmarkBinaryVersion:
-      description: Daemon binary version
+      description: Run --version
       benchtime: 2s
       metrics:
         duration:
           description: Time (ms)
     BenchmarkBinarySize:
       description: Daemon binary size
+      count: 1
+      metrics:
+        bytes:
+          description: Size (bytes)
+    BenchmarkPackageSize:
+      description: Package size
       count: 1
       metrics:
         bytes:
