metric: return floating point number of seconds
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -9,7 +9,7 @@ runs:
       benchtime: 2s
       metrics:
         duration:
-          description: Time (ms)
+          description: Time (s)
     BenchmarkBinarySize:
       description: Daemon binary size
       count: 1
