--- a/testconfig.yml
+++ b/testconfig.yml
@@ -3,19 +3,21 @@ defaults:
   benchtime: 1s
 
 runs:
-  BenchmarkBinary:
-    BenchmarkBinaryVersion:
-      description: Run --version
+  BenchmarkDaemon:
+    BenchmarkDaemonVersion:
+      description: Run buildkitd --version
       benchtime: 2s
       metrics:
         duration:
           description: Time (s)
-    BenchmarkBinarySize:
+    BenchmarkDaemonSize:
       description: Daemon binary size
       count: 1
       metrics:
         bytes:
           description: Size (bytes)
+
+  BenchmarkPackage:
     BenchmarkPackageSize:
       description: Package size
       count: 1
