--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,7 +140,7 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-  merge:
+  report:
     runs-on: ubuntu-24.04
     needs:
       - test
@@ -167,21 +167,20 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
       -
-        name: Merge and generate graphs
+        name: Generate HTML report
         run: |
-          go run -mod=vendor ./cmd/gotestmetrics --debug merge \
+          go run -mod=vendor ./cmd/gotestmetrics --debug gen \
             --config ./testconfig.yml \
             --candidates /tmp/buildkit-bench/candidates.json \
-            --format html \
-            --output ./bin/results \
-            /tmp/buildkit-bench/results
+            --output ./bin/report/index.html \
+            /tmp/buildkit-bench/results/*.json
       -
         name: Publish
         uses: crazy-max/ghaction-github-pages@v4
         if: github.event_name != 'pull_request'
         with:
           target_branch: gh-pages
-          build_dir: ./bin/results
+          build_dir: ./bin/report
           jekyll: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
