hack: add TEST_BENCH_REGEXP var
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,7 +119,7 @@ jobs:
         run: |
           ./hack/test
         env:
-          TEST_FLAGS: -bench=${{ matrix.test }} ${{ env.TEST_FLAGS }}
+          TEST_BENCH_REGEXP: ${{ matrix.test }}
           TEST_BENCH_RUN: ${{ matrix.count }}
           TEST_BENCH_TIME: ${{ matrix.benchtime }}
       -
