--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,22 @@ jobs:
         run: |
           go run -mod=vendor ./cmd/gotestmetrics \
             --debug list --gha-output includes
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: ${{ env.SETUP_BUILDX_VERSION }}
+          driver-opts: image=${{ env.SETUP_BUILDKIT_IMAGE }}
+          buildkitd-flags: --debug
+      -
+        name: Build tests base
+        uses: docker/bake-action@v5
+        with:
+          targets: tests-base
+          provenance: false
+          set: |
+            *.cache-from=type=gha,scope=tests-base
+            *.cache-to=type=gha,scope=tests-base
 
   buildkit-binaries:
     uses: ./.github/workflows/.buildkit-binaries.yml
@@ -112,6 +128,7 @@ jobs:
           targets: tests
           provenance: false
           set: |
+            tests-base.cache-from=type=gha,scope=tests-base
             *.contexts.buildkit-binaries=./bin/buildkit-binaries
             *.output=type=docker,name=${{ env.TEST_IMAGE_ID }}
       -
