--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,6 +96,8 @@ jobs:
       TEST_FLAGS: -v --timeout=30m
       TEST_IMAGE_BUILD: 0
       TEST_IMAGE_ID: buildkit-bench
+      TEST_RESULTS_DIR: bin/results
+      TEST_GEN: 0
     steps:
       -
         name: Checkout
@@ -143,10 +145,10 @@ jobs:
         name: Result
         run: |
           resultName=$(echo ${{ matrix.test }} | sed 's/\//-/g')
-          resultPath=./bin/gotestoutput-$resultName.json
+          resultPath=./${{ env.TEST_RESULTS_DIR }}/gotestoutput-$resultName.json
           echo "TEST_RESULT_NAME=$resultName" >> $GITHUB_ENV
           echo "TEST_RESULT_PATH=$resultPath" >> $GITHUB_ENV
-          mv ./bin/gotestoutput.json $resultPath
+          mv ./${{ env.TEST_RESULTS_DIR }}/gotestoutput.json $resultPath
           jq . $resultPath
       -
         name: Upload results
@@ -166,7 +168,7 @@ jobs:
         name: Download results
         uses: actions/download-artifact@v4
         with:
-          path: /tmp/buildkit-bench/results
+          path: /tmp/buildkit-bench
           pattern: bench-results-*
           merge-multiple: true
       -
@@ -179,18 +181,22 @@ jobs:
         name: Checkout
         uses: actions/checkout@v4
       -
-        name: Set up Go
-        uses: actions/setup-go@v5
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
         with:
-          go-version: ${{ env.GO_VERSION }}
+          version: ${{ env.SETUP_BUILDX_VERSION }}
+          driver-opts: image=${{ env.SETUP_BUILDKIT_IMAGE }}
+          buildkitd-flags: --debug
       -
         name: Generate HTML report
-        run: |
-          go run -mod=vendor ./cmd/gotestmetrics --debug gen \
-            --config ./testconfig.yml \
-            --candidates /tmp/buildkit-bench/candidates.json \
-            --output ./bin/report/index.html \
-            /tmp/buildkit-bench/results/*.json
+        uses: docker/bake-action@v5
+        with:
+          targets: tests-gen
+          provenance: false
+          set: |
+            tests-base.cache-from=type=gha,scope=tests-base
+            *.contexts.tests-results=/tmp/buildkit-bench
+            *.output=./bin/report
       -
         name: Publish
         uses: crazy-max/ghaction-github-pages@v4
