ci: increase test timeout
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,7 @@ jobs:
       matrix:
         include: ${{ fromJson(needs.prepare.outputs.includes) }}
     env:
-      TEST_FLAGS: -v --timeout=30m
+      TEST_FLAGS: -v --timeout=5h
       TEST_IMAGE_BUILD: 0
       TEST_IMAGE_ID: buildkit-bench
       TEST_RESULTS_DIR: bin/results
