--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,21 @@ jobs:
       TEST_GEN: 0
     steps:
       -
+        name: Prepare
+        run: |
+          echo "TEST_BENCH_RUN=${{ matrix.count }}" >> $GITHUB_ENV
+          echo "TEST_BENCH_TIME=${{ matrix.benchtime }}" >> $GITHUB_ENV
+      -
+        name: Override bench run and time
+        if: github.event_name == 'pull_request'
+        run: |
+          if [ "${{ matrix.count }}" -gt 2 ]; then
+            echo "TEST_BENCH_RUN=2" >> $GITHUB_ENV
+          else
+            echo "TEST_BENCH_RUN=${{ matrix.count }}" >> $GITHUB_ENV
+          fi
+          echo "TEST_BENCH_TIME=1s" >> $GITHUB_ENV
+      -
         name: Checkout
         uses: actions/checkout@v4
       -
@@ -139,8 +154,6 @@ jobs:
           ./hack/test
         env:
           TEST_BENCH_REGEXP: ${{ matrix.test }}
-          TEST_BENCH_RUN: ${{ matrix.count }}
-          TEST_BENCH_TIME: ${{ matrix.benchtime }}
       -
         name: Result
         run: |
