test: build with secret
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -11,6 +11,13 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
+    BenchmarkBuildLocalSecret:
+      description: Local build with secret
+      count: 4
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
     BenchmarkBuildRemoteBuildme:
       description: Remote build of github.com/dvdksn/buildme
       count: 4
