test: remove BenchmarkBuildRemoteBuildx
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -19,14 +19,7 @@ runs:
           description: Time (s)
           chart: boxplot
     BenchmarkBuildRemoteBuildme:
-      description: Remote build of github.com/dvdksn/buildme
-      count: 4
-      metrics:
-        duration:
-          description: Time (s)
-          chart: boxplot
-    BenchmarkBuildRemoteBuildx:
-      description: Remote build of github.com/docker/buildx
+      description: Remote build github.com/dvdksn/buildme
       count: 4
       metrics:
         duration:
