ci: fix bench regexp
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,7 +165,7 @@ jobs:
         run: |
           ./hack/test
         env:
-          TEST_BENCH_REGEXP: ${{ matrix.test }}
+          TEST_BENCH_REGEXP: ${{ matrix.test }}$
       -
         name: Result
         run: |
