--- a/.github/workflows/.buildkit-binaries.yml
+++ b/.github/workflows/.buildkit-binaries.yml
@@ -24,6 +24,7 @@ env:
   GO_VERSION: 1.22
   SETUP_BUILDX_VERSION: latest
   SETUP_BUILDKIT_IMAGE: moby/buildkit:latest
+  BUILDKIT_CACHE_REPO: moby/buildkit-bench-cache
 
 jobs:
   prepare:
@@ -81,6 +82,13 @@ jobs:
           driver-opts: image=${{ env.SETUP_BUILDKIT_IMAGE }}
           buildkitd-flags: --debug
       -
+        name: Login to Docker Hub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
         name: Build
         uses: docker/bake-action@v5
         with:
@@ -88,8 +96,9 @@ jobs:
           provenance: false
           set: |
             *.output=./bin/buildkit-binaries/${{ matrix.name }}
-            *.cache-from=type=gha,scope=buildkit-binaries-${{ matrix.commit }}
-            *.cache-to=type=gha,scope=buildkit-binaries-${{ matrix.commit }}
+            *.cache-from=type=registry,ref=${{ env.BUILDKIT_CACHE_REPO }}:bkbins-${{ matrix.commit }}
+            *.cache-to=type=registry,ignore-error=true,ref=${{ env.BUILDKIT_CACHE_REPO }}:bkbins-${{ matrix.commit }}
+            *.cache-to=type=registry,ignore-error=true,ref=${{ env.BUILDKIT_CACHE_REPO }}:bkbins-${{ matrix.ref }}
         env:
           BUILDKIT_REPO: ${{ inputs.repo }}
           BUILDKIT_REFS: ${{ matrix.ref }}
