move random candidates selection logic on pr to refcandidates
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/.buildkit-binaries.yml
+++ b/.github/workflows/.buildkit-binaries.yml
@@ -54,6 +54,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       -
+        name: List candidates
+        run: |
+          jq . ./bin/candidates.json
+      -
         name: Upload candidates
         uses: actions/upload-artifact@v4
         with:
