--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ env:
   SETUP_BUILDKIT_IMAGE: moby/buildkit:latest
   BUILDKIT_REPO: moby/buildkit
   BUILDKIT_ARTIFACT_KEY: buildkit-binaries
+  BUILDKIT_CACHE_REPO: moby/buildkit-bench-cache
   CANDIDATES_REFS: master
   CANDIDATES_LAST_DAYS: 15
   CANDIDATES_LAST_RELEASES: 8
@@ -65,11 +66,12 @@ jobs:
         name: Build tests base
         uses: docker/bake-action@v5
         with:
+          source: "{{defaultContext}}"
           targets: tests-base
           provenance: false
           set: |
-            *.cache-from=type=gha,scope=tests-base
-            *.cache-to=type=gha,scope=tests-base
+            *.cache-from=type=registry,ref=${{ env.BUILDKIT_CACHE_REPO }}:tests-base
+            *.cache-to=type=registry,ignore-error=true,mode=max,ref=${{ env.BUILDKIT_CACHE_REPO }}:tests-base
 
   buildkit-binaries:
     uses: ./.github/workflows/.buildkit-binaries.yml
@@ -115,9 +117,6 @@ jobs:
           fi
           echo "TEST_BENCH_TIME=1s" >> $GITHUB_ENV
       -
-        name: Checkout
-        uses: actions/checkout@v4
-      -
         name: Download binaries
         uses: actions/download-artifact@v4
         with:
@@ -142,12 +141,16 @@ jobs:
         name: Build test image
         uses: docker/bake-action@v5
         with:
+          source: "{{defaultContext}}"
           targets: tests
           provenance: false
           set: |
-            tests-base.cache-from=type=gha,scope=tests-base
-            *.contexts.buildkit-binaries=./bin/buildkit-binaries
+            *.cache-from=type=registry,ref=${{ env.BUILDKIT_CACHE_REPO }}:tests-base
+            *.contexts.buildkit-binaries=cwd://bin/buildkit-binaries
             *.output=type=docker,name=${{ env.TEST_IMAGE_ID }}
+      -
+        name: Checkout
+        uses: actions/checkout@v4
       -
         name: Test
         run: |
@@ -191,9 +194,6 @@ jobs:
           name: candidates
           path: /tmp/buildkit-bench
       -
-        name: Checkout
-        uses: actions/checkout@v4
-      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
@@ -204,12 +204,15 @@ jobs:
         name: Generate HTML report
         uses: docker/bake-action@v5
         with:
+          source: "{{defaultContext}}"
           targets: tests-gen
           provenance: false
           set: |
-            tests-base.cache-from=type=gha,scope=tests-base
-            *.contexts.tests-results=/tmp/buildkit-bench
+            *.cache-from=type=registry,ref=${{ env.BUILDKIT_CACHE_REPO }}:tests-base
+            *.contexts.tests-results=cwd:///tmp/buildkit-bench
             *.output=./bin/report
+        env:
+          BAKE_ALLOW_REMOTE_FS_ACCESS: 1
       -
         name: Upload report
         uses: actions/upload-artifact@v4
