test: build breaker
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -25,6 +25,34 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
+    BenchmarkBuildBreaker16:
+      description: Build breaker 16x
+      count: 1
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
+    BenchmarkBuildBreaker32:
+      description: Build breaker 32x
+      count: 1
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
+    BenchmarkBuildBreaker64:
+      description: Build breaker 64x
+      count: 1
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
+    BenchmarkBuildBreaker128:
+      description: Build breaker 128x
+      count: 1
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
 
   BenchmarkDaemon:
     BenchmarkDaemonVersion:
