--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,21 +109,6 @@ jobs:
       TEST_GEN: 0
     steps:
       -
-        name: Prepare
-        run: |
-          echo "TEST_BENCH_RUN=${{ matrix.count }}" >> $GITHUB_ENV
-          echo "TEST_BENCH_TIME=${{ matrix.benchtime }}" >> $GITHUB_ENV
-      -
-        name: Override bench run and time
-        if: github.event_name == 'pull_request'
-        run: |
-          if [ "${{ matrix.count }}" -gt 2 ]; then
-            echo "TEST_BENCH_RUN=2" >> $GITHUB_ENV
-          else
-            echo "TEST_BENCH_RUN=${{ matrix.count }}" >> $GITHUB_ENV
-          fi
-          echo "TEST_BENCH_TIME=1s" >> $GITHUB_ENV
-      -
         name: Download binaries
         uses: actions/download-artifact@v4
         with:
@@ -164,6 +149,8 @@ jobs:
           ./hack/test
         env:
           TEST_BENCH_REGEXP: ${{ matrix.test }}$
+          TEST_BENCH_RUN: ${{ matrix.count }}
+          TEST_BENCH_TIME: ${{ matrix.benchtime }}
       -
         name: Result
         run: |
