test: fix benchtime for local build
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -7,6 +7,7 @@ runs:
     BenchmarkBuildLocal:
       description: Local build
       count: 4
+      benchtime: 0.1s
       metrics:
         duration:
           description: Time (s)
