test: fix duration change to NsPerOp for daemon version
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -59,6 +59,7 @@ runs:
     BenchmarkDaemonVersion:
       description: Run buildkitd --version
       count: 8
+      benchtime: 0.01s
       metrics:
         duration:
           description: Time (s)
