website: fix public path
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -258,6 +258,8 @@ jobs:
         with:
           targets: website
           provenance: false
+        env:
+         WEBSITE_PUBLIC_PATH: /buildkit-bench/
       -
         name: Publish
         uses: crazy-max/ghaction-github-pages@v4
