--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ env:
   CANDIDATES_REFS: master
   CANDIDATES_LAST_DAYS: 15
   CANDIDATES_LAST_RELEASES: 8
+  GEN_VALIDATION_MODE: strict
   WEBSITE_PUBLIC_PATH: /buildkit-bench/
 
 jobs:
