--- a/.github/workflows/regen.yml
+++ b/.github/workflows/regen.yml
@@ -21,6 +21,7 @@ env:
   SETUP_BUILDX_VERSION: latest
   SETUP_BUILDKIT_IMAGE: moby/buildkit:latest
   BUILDKIT_CACHE_REPO: moby/buildkit-bench-cache
+  GEN_VALIDATION_MODE: strict
   WEBSITE_PUBLIC_PATH: /buildkit-bench/
 
 jobs:
