--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -216,10 +216,10 @@ jobs:
         name: Include additional files to report directory
         run: |
           cp /tmp/buildkit-bench/* ./testconfig.yml ./bin/report/
-          cat <<EOF > ./bin/report/metadata.txt
-          repo=${{ github.repository }}
-          commit=${{ github.sha }}
-          EOF
+          env|sort > ./bin/report/env.txt
+          if [ -f "$GITHUB_EVENT_PATH" ]; then
+            cp $GITHUB_EVENT_PATH ./bin/report/gha-event.json
+          fi
       -
         name: Upload report
         uses: actions/upload-artifact@v4
