generate html report and serve website
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -12,18 +12,20 @@ RUN --mount=type=bind,target=.,rw \
   yarn config set --home enableTelemetry 0
 EOT
 
-FROM base AS deps
-RUN --mount=type=bind,target=.,rw \
-  --mount=type=cache,target=/src/.yarn/cache \
-  --mount=type=cache,target=/src/node_modules \
-  yarn install
+FROM base AS install
+COPY .yarnrc.yml package.json yarn.lock ./
+RUN yarn install
 
-FROM deps AS build
+FROM base AS dev
+COPY --from=install /src/node_modules /src/node_modules
+COPY . .
+
+FROM base AS build
 ARG WEBSITE_PUBLIC_PATH
 RUN --mount=type=bind,target=.,rw \
   --mount=type=cache,target=/src/.yarn/cache \
-  --mount=type=cache,target=/src/node_modules \
+  --mount=from=install,source=/src/node_modules,target=/src/node_modules \
   yarn run build && cp -Rf ./dist /out
 
-FROM scratch
+FROM scratch AS build-update
 COPY --from=build /out /
