github: setup-qemu for more realistic test environment
Because no emulators are installed in kernel many codepaths are
skipped and bugs in typical environment can go undetected.

Signed-off-by: Tonis Tiigi <tonistiigi@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,6 +134,9 @@ jobs:
           version: ${{ env.SETUP_BUILDX_VERSION }}
           driver: docker
       -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
         name: Build test image
         uses: docker/bake-action@v5
         with:
