test: file transfer
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -68,6 +68,14 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
+    BenchmarkBuildFileTransfer:
+      description: Build with substantial file transfer
+      count: 4
+      benchtime: 1s
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
 
   BenchmarkDaemon:
     BenchmarkDaemonVersion:
