test: rename build breaker cases
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -32,29 +32,36 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
-    BenchmarkBuildBreaker16:
-      description: Build breaker 16x
+    BenchmarkBuildHighParallelization16x:
+      description: Build high parallelization (16x)
       count: 3
       metrics:
         duration:
           description: Time (s)
           chart: boxplot
-    BenchmarkBuildBreaker32:
-      description: Build breaker 32x
+    BenchmarkBuildHighParallelization32x:
+      description: Build high parallelization (32x)
       count: 4
       metrics:
         duration:
           description: Time (s)
           chart: boxplot
-    BenchmarkBuildBreaker64:
-      description: Build breaker 64x
+    BenchmarkBuildHighParallelization64x:
+      description: Build high parallelization (64x)
       count: 4
       metrics:
         duration:
           description: Time (s)
           chart: boxplot
-    BenchmarkBuildBreaker128:
-      description: Build breaker 128x
+    BenchmarkBuildHighParallelization128x:
+      description: Build high parallelization (128x)
+      count: 4
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
+    BenchmarkBuildHighParallelization256x:
+      description: Build high parallelization (256x)
       count: 4
       metrics:
         duration:
