test: build with emulator
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -67,6 +67,13 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
+    BenchmarkBuildEmulator:
+      description: Build with emulator
+      count: 10
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
 
   BenchmarkDaemon:
     BenchmarkDaemonVersion:
