add custom ref to bench gogoproto removal
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ env:
   BUILDKIT_REPO: moby/buildkit
   BUILDKIT_ARTIFACT_KEY: buildkit-binaries
   BUILDKIT_CACHE_REPO: moby/buildkit-bench-cache
-  CANDIDATES_REFS: master
+  CANDIDATES_REFS: master,pr-5342
   CANDIDATES_LAST_DAYS: 15
   CANDIDATES_LAST_RELEASES: 8
   GEN_VALIDATION_MODE: strict
