candidates: handle pull requests
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/.buildkit-binaries.yml
+++ b/.github/workflows/.buildkit-binaries.yml
@@ -45,10 +45,10 @@ jobs:
         id: set
         run: |
           go run -mod=vendor ./cmd/refcandidates \
-            --repo ${{ inputs.repo }} \
-            --refs ${{ inputs.refs }} \
-            --last-days ${{ inputs.last_days }} \
-            --last-releases ${{ inputs.last_releases }} \
+            --repo "${{ inputs.repo }}" \
+            --refs "${{ inputs.refs }}" \
+            --last-days "${{ inputs.last_days }}" \
+            --last-releases "${{ inputs.last_releases }}" \
             --file-output ./bin/candidates.json \
             --gha-output includes
         env:
