website: use webpack to generate results list
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/website/package.json
+++ b/website/package.json
@@ -2,9 +2,8 @@
   "name": "buildkit-bench-website",
   "private": true,
   "scripts": {
-    "serve": "yarn run prebuild && vue-cli-service serve",
-    "prebuild": "node generateResults.js",
-    "build": "yarn run prebuild && vue-cli-service build"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "repository": {
     "type": "git",
